<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    tools:context="com.gupta.ram.assignment.fragment.BusinessProfileFragment">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/company_name"
        android:textStyle="bold"
        android:textSize="20sp"
        android:padding="5dp"
        android:textColor="#01fa4c"/>


    <ImageView
        android:layout_width="140sp"
        android:layout_height="140sp"
        android:src="@drawable/big_trade"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="#257af2"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:attr/ratingBarStyleSmall"
        android:rating="3.5"
        android:padding="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:inputType="textMultiLine"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/address"/>





</LinearLayout>
