<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.gupta.ram.assignment.AddProductActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.Toolbar
            android:id="@+id/addProduct_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/colorWhite" />


        <ImageView
            android:id="@+id/product_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.091"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addProduct_toolbar" />

        <EditText
            android:id="@+id/product_id"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:hint="@string/id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/addProduct_toolbar" />

        <EditText
            android:id="@+id/product_mrp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:hint="@string/mrp"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/product_id" />

        <EditText
            android:id="@+id/product_sell_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:hint="@string/selling_price"
            android:inputType="number"
            android:maxLines="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/product_image"
            app:layout_constraintTop_toBottomOf="@+id/product_mrp" />

        <EditText
            android:id="@+id/product_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:hint="@string/name1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.081"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_image" />

        <EditText
            android:id="@+id/product_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"

            android:layout_marginTop="8dp"
            android:hint="@string/description1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.681"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_name" />

        <EditText
            android:id="@+id/product_quantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:hint="@string/quantity"

            android:inputType="number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/product_name"
            app:layout_constraintTop_toBottomOf="@+id/product_sell_price" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="185dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="12dp"
            android:text="@string/save"
            android:backgroundTint="#0bfd07"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.072"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/product_description" />


        <Button
            android:id="@+id/edit_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:text="Edit"
            android:visibility="invisible"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_btn"
            app:layout_constraintTop_toBottomOf="@+id/product_description" />
        <Button
            android:id="@+id/update_btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="11dp"
            android:text="Update"
            android:visibility="invisible"
            android:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save_btn"
            app:layout_constraintTop_toBottomOf="@+id/product_description" />



    </android.support.constraint.ConstraintLayout>

</ScrollView>
