<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.gupta.ram.assignment.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:titleTextColor="@color/colorWhite"
        android:minHeight="?attr/actionBarSize">

    </android.support.v7.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/register_here"
        android:textStyle="bold"
        android:textSize="15sp"
        android:gravity="center"
        style="@style/myStyle"

        />
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <EditText
                android:id="@+id/user_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                style="@style/myStyle"

                />


            <EditText
                android:id="@+id/email_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/myStyle"/>

            <EditText
                android:id="@+id/password_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                style="@style/myStyle"/>

            <EditText
                android:id="@+id/confirm_pass_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:inputType="textPassword"

                style="@style/myStyle"
                />

            <Button
                android:id="@+id/reg_btn_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register"

                style="@style/myStyle"/>

            <TextView
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Already Have account ?"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                />


        </LinearLayout>


    </ScrollView>


</LinearLayout>
